// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeSpec should render Badge 1`] = `
<div
  className="tc-badge theme-tc-badge tc-badge-readonly theme-tc-badge-readonly"
>
  <div
    className="tc-badge-button theme-tc-badge-button"
    id="tc-badge-select-my-badge"
  >
    <span
      className="tc-badge-label theme-tc-badge-label"
    >
      Label
    </span>
  </div>
</div>
`;

exports[`BadgeSpec should render Badge as button 1`] = `
<div
  className="tc-badge theme-tc-badge tc-badge-readonly theme-tc-badge-readonly"
>
  <button
    className="tc-badge-button theme-tc-badge-button"
    disabled={false}
    id="tc-badge-select-my-badge"
    onClick={[MockFunction]}
    type="button"
  >
    <span
      className="tc-badge-label theme-tc-badge-label"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BadgeSpec should render Badge with category and delete icon 1`] = `
<div
  className="tc-badge theme-tc-badge"
>
  <div
    className="tc-badge-button theme-tc-badge-button"
  >
    <span
      className="tc-badge-category theme-tc-badge-category"
    >
      Category
    </span>
    <span
      className="tc-badge-label theme-tc-badge-label"
    >
      Label
    </span>
  </div>
  <Action
    className="tc-badge-delete-icon theme-tc-badge-delete-icon"
    disabled={false}
    hideLabel={true}
    icon="talend-cross"
    label="delete"
    link={true}
    onClick={[Function]}
    role="button"
  />
</div>
`;

exports[`BadgeSpec should render Badge with delete icon 1`] = `
<div
  className="tc-badge theme-tc-badge"
>
  <div
    className="tc-badge-button theme-tc-badge-button"
    id="tc-badge-select-my-badge"
  >
    <span
      className="tc-badge-label theme-tc-badge-label"
    >
      Label
    </span>
  </div>
  <Action
    className="tc-badge-delete-icon theme-tc-badge-delete-icon"
    disabled={false}
    hideLabel={true}
    icon="talend-cross"
    id="tc-badge-delete-my-badge"
    label="delete"
    link={true}
    onClick={[Function]}
    role="button"
  />
</div>
`;

exports[`BadgeSpec should render Badge with selection handler and select id 1`] = `
<div
  className="tc-badge theme-tc-badge tc-badge-readonly theme-tc-badge-readonly"
>
  <button
    className="tc-badge-button theme-tc-badge-button"
    disabled={false}
    id="tc-badge-select-select"
    onClick={[Function]}
    type="button"
  >
    <span
      className="tc-badge-label theme-tc-badge-label"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BadgeSpec should render disabled Badge with delete icon and delete id 1`] = `
<div
  className="tc-badge theme-tc-badge tc-badge-disabled theme-tc-badge-disabled"
>
  <div
    className="tc-badge-button theme-tc-badge-button"
    id="tc-badge-select-delete"
  >
    <span
      className="tc-badge-label theme-tc-badge-label"
    >
      Label
    </span>
  </div>
  <Action
    className="tc-badge-delete-icon theme-tc-badge-delete-icon"
    disabled={true}
    hideLabel={true}
    icon="talend-cross"
    id="tc-badge-delete-delete"
    label="delete"
    link={true}
    onClick={[Function]}
    role="button"
  />
</div>
`;

exports[`BadgeSpec should render selected Badge with delete icon 1`] = `
<div
  className="tc-badge theme-tc-badge tc-badge-selected theme-tc-badge-selected"
>
  <div
    className="tc-badge-button theme-tc-badge-button"
  >
    <span
      className="tc-badge-label theme-tc-badge-label"
    >
      Label
    </span>
  </div>
  <Action
    className="tc-badge-delete-icon theme-tc-badge-delete-icon"
    disabled={false}
    hideLabel={true}
    icon="talend-cross"
    label="delete"
    link={true}
    onClick={[Function]}
    role="button"
  />
</div>
`;
